3. Use Alt+Arrow instead of just Arrow for shortcuts.
4. When remapping icons, check object icon/icon-id property is a string.
5. Fix broken expand now-playing button in desktop layout.
6. Fix updating queue when remove a selection of tracks.
7. Place 'Server settings' back into main menu.
8. Fix missing shortcuts from some queue action tooltips.

1.1.0
-----
 1. Swipe up/down in now-playing to change volume.
 2. Show desktop style volume control in mobile view if width is 900px or more.
 3. Search for podcasts via iTunes or GPodder, and add to podcast subscriptions.
 4. Add action to remove podcasts.
 5. Add action to add podcast via URL.
 6. Add configuration of browse-modes to player settings.
 7. When creating, or editing, a group, set browse modes to the enabled modes
    from all members.
 8. List all active plugins in 'Information' dialog.
 9. Add updating of plugins to 'Information' dialog.
10. Remove 'Server settings' from main menu, make accessible from 'Information'
    dialog.
11. Check for plugin updates 1/2 second after connecting to server, and every
    30 minutes thereafter.
12. Replace main menu icon with green arrow icon to indicate updates available.
13. Auto-scroll 'Information' dialog to plugins section if there are updates
    available when it is opened.
14. Add option to use 3 lines for queue items (title, artist, album).
15. Show server settings, and advanced player settings, from 'Classic' skin and
    placed within an iframe.
16. When showing track information via now-playing, or a queue item, if 'Back'
    button is pressed, then change back to the relevant 'Playing' or 'Queue'
    tab.
17. Add 'Advanced search' - by embedding advanced search page from Classic
    skin.
18. Add action to delete virtual libraries.
19. Update MaterialIcons.ttf
20. Replace some LMS icons in 'Radio' and 'Apps' sections with Material icons.
21. Optionally enable some keyboard short-cuts.